# Scour

./: .env.example  .gitignore  README.md  flake.nix  install.sh  pyproject.toml  test_doom.sh
src/scour/: app.py  doom.py  models.py  pipeline.py  utils.py
src/scour/api/: gemini.py  serper.py  tinyfish.py
src/scour/widgets/: history.py  loading.py  report_preview.py  results.py  welcome.py
